hphp/hack/test/extended_reasons/union_subtyping_l.php.debug.exp
error: Typing[4110] Invalid return type

Expected `C`

 6 | function union_l((A | B) $ab): »C« {
 7 |   return $ab;
 8 | }

File "union_subtyping_l.php", line 6, character 32 - line 6, character 32:

But got `A`

 6 | function union_l((»A« | B) $ab): C {
 7 |   return $ab;
 8 | }

File "union_subtyping_l.php", line 6, character 19 - line 6, character 19:

Flow:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rhint":[{"filename":"union_subtyping_l.php","line":6,"char_start":19,"char_end":19}]
        },
        {
          "Rprj_asymm_left":[
            "Prj_asymm_union",
            {
              "Rflow":[
                {
                  "Rflow":[
                    {
                      "Rflow":[
                        {
                          "Rhint":[{"filename":"union_subtyping_l.php","line":6,"char_start":18,"char_end":24}]
                        },
                        {
                          "Rwitness":[{"filename":"union_subtyping_l.php","line":6,"char_start":26,"char_end":28}]
                        }
                      ]
                    },
                    {
                      "Rwitness":[{"filename":"union_subtyping_l.php","line":7,"char_start":10,"char_end":12}]
                    }
                  ]
                },
                {
                  "Rwitness":[{"filename":"union_subtyping_l.php","line":7,"char_start":3,"char_end":13}]
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "Rhint":[{"filename":"union_subtyping_l.php","line":6,"char_start":32,"char_end":32}]
    }
  ]
}


File "", line 0, character 0 - line 0, character -1:

error: Typing[4110] Invalid return type

Expected `C`

 6 | function union_l((A | B) $ab): »C« {
 7 |   return $ab;
 8 | }

File "union_subtyping_l.php", line 6, character 32 - line 6, character 32:

But got `B`

 6 | function union_l((A | »B«) $ab): C {
 7 |   return $ab;
 8 | }

File "union_subtyping_l.php", line 6, character 23 - line 6, character 23:

Flow:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rhint":[{"filename":"union_subtyping_l.php","line":6,"char_start":23,"char_end":23}]
        },
        {
          "Rprj_asymm_left":[
            "Prj_asymm_union",
            {
              "Rflow":[
                {
                  "Rflow":[
                    {
                      "Rflow":[
                        {
                          "Rhint":[{"filename":"union_subtyping_l.php","line":6,"char_start":18,"char_end":24}]
                        },
                        {
                          "Rwitness":[{"filename":"union_subtyping_l.php","line":6,"char_start":26,"char_end":28}]
                        }
                      ]
                    },
                    {
                      "Rwitness":[{"filename":"union_subtyping_l.php","line":7,"char_start":10,"char_end":12}]
                    }
                  ]
                },
                {
                  "Rwitness":[{"filename":"union_subtyping_l.php","line":7,"char_start":3,"char_end":13}]
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "Rhint":[{"filename":"union_subtyping_l.php","line":6,"char_start":32,"char_end":32}]
    }
  ]
}


File "", line 0, character 0 - line 0, character -1:

2 errors found.
