hphp/hack/test/extended_reasons/union_subtyping_l.php
<?hh
class A {}
class B {}
class C {}

function union_l((A | B) $ab): C {
  return $ab;
}
